force-app/main/default/objects/User_Story__c/User_Story__c.object-meta.xml
<CustomObject>
    <description>User Stories capture initial, high-level objectives and outcomes that are desired. 

User Stories captures what a user does or needs to do as part of his or her job function.

User Stories captures the &apos;who&apos;, &apos;what&apos; and &apos;why&apos; of a requirement in a simple, concise way.

User Stories serve as the foundation from which all requirements will be built off of.</description>
    <label>User Story</label>
    <nameField>
        <displayFormat>USR-{0000}</displayFormat>
        <label>Req. ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User Stories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>