force-app/main/default/objects/User_Story__c/fields/Because__c.field-meta.xml
<CustomField>
    <fullName>Because__c</fullName>
    <description>Why? Because....</description>
    <inlineHelpText>What is the value behind this request? What does this enable? How does this help?</inlineHelpText>
    <label>Because</label>
    <length>255</length>
    <type>Text</type>
</CustomField>