force-app/main/default/objects/User_Story__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Customer Support</fullName>
            </value>
            <value>
                <fullName>Data</fullName>
            </value>
            <value>
                <fullName>Engineering</fullName>
            </value>
            <value>
                <fullName>Executive</fullName>
            </value>
            <value>
                <fullName>Finance</fullName>
            </value>
            <value>
                <fullName>Legal</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Professional Services</fullName>
            </value>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>Sales, Inside</fullName>
            </value>
            <value>
                <fullName>Sales, Operations</fullName>
            </value>
            <value>
                <fullName>Deal Desk</fullName>
            </value>
            <value>
                <fullName>CPQ</fullName>
            </value>
            <value>
                <fullName>Fast Track</fullName>
            </value>
            <value>
                <fullName>Data Deduplication</fullName>
            </value>
            <value>
                <fullName>Data Integration</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>