force-app/main/default/objects/User_Story__c/fields/I_Want__c.field-meta.xml
<CustomField>
    <fullName>I_Want__c</fullName>
    <inlineHelpText>A short concise sentence or two that describes the need.</inlineHelpText>
    <label>I Want</label>
    <length>255</length>
    <type>Text</type>
</CustomField>