force-app/main/default/objects/User_Story__c/listViews/All_CPQ_User_Stories.listView-meta.xml
<ListView>
    <fullName>All_CPQ_User_Stories</fullName>
    <booleanFilter>1 OR 2</booleanFilter>
    <columns>NAME</columns>
    <columns>I_Want__c</columns>
    <columns>I_Am_A__c</columns>
    <columns>Because__c</columns>
    <columns>Category__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>Status__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Category__c</field>
        <operation>includes</operation>
        <value>CPQ</value>
    </filters>
    <filters>
        <field>I_Want__c</field>
        <operation>contains</operation>
        <value>CPQ</value>
    </filters>
    <label>All CPQ User Stories</label>
    <language>en_US</language>
</ListView>