force-app/main/default/objects/User_Story__c/listViews/All_Data_User_Stories.listView-meta.xml
<ListView>
    <fullName>All_Data_User_Stories</fullName>
    <columns>NAME</columns>
    <columns>I_Am_A__c</columns>
    <columns>I_Want__c</columns>
    <columns>Because__c</columns>
    <columns>Category__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Category__c</field>
        <operation>includes</operation>
        <value>Data</value>
    </filters>
    <label>All Data User Stories</label>
    <language>en_US</language>
</ListView>