force-app/main/default/objects/User_Story__c/listViews/All_Engineering_RD_User_Stories.listView-meta.xml
<ListView>
    <fullName>All_Engineering_RD_User_Stories</fullName>
    <booleanFilter>1 OR 2</booleanFilter>
    <columns>NAME</columns>
    <columns>I_Am_A__c</columns>
    <columns>I_Want__c</columns>
    <columns>Because__c</columns>
    <columns>Category__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>I_Am_A__c</field>
        <operation>equals</operation>
        <value>Engineering / R&amp;D</value>
    </filters>
    <filters>
        <field>Category__c</field>
        <operation>includes</operation>
        <value>Engineering</value>
    </filters>
    <label>All Engineering / R&amp;D User Stories</label>
    <language>en_US</language>
</ListView>