force-app/main/default/objects/User_Story__c/listViews/All_Finance_User_Stories.listView-meta.xml
<ListView>
    <fullName>All_Finance_User_Stories</fullName>
    <columns>NAME</columns>
    <columns>I_Am_A__c</columns>
    <columns>I_Want__c</columns>
    <columns>Because__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>I_Am_A__c</field>
        <operation>equals</operation>
        <value>Finance</value>
    </filters>
    <label>All Finance User Stories</label>
    <language>en_US</language>
</ListView>