force-app/main/default/objects/User_Story__c/listViews/All_Pro_Services_Approved.listView-meta.xml
<ListView>
    <fullName>All_Pro_Services_Approved</fullName>
    <columns>NAME</columns>
    <columns>I_Am_A__c</columns>
    <columns>I_Want__c</columns>
    <columns>Because__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>I_Am_A__c</field>
        <operation>equals</operation>
        <value>Professional Services,Professional Services Manager</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Approved</value>
    </filters>
    <label>All Pro Services (Approved)</label>
    <language>en_US</language>
</ListView>