force-app/main/default/objects/User_Story__c/listViews/AllMarketing.listView-meta.xml
<ListView>
    <fullName>AllMarketing</fullName>
    <columns>NAME</columns>
    <columns>I_Am_A__c</columns>
    <columns>I_Want__c</columns>
    <columns>Because__c</columns>
    <columns>Category__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>I_Am_A__c</field>
        <operation>equals</operation>
        <value>Inside Sales,Marketing</value>
    </filters>
    <label>All Marketing</label>
    <language>en_US</language>
</ListView>